--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "swiper": "^9.2.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-collapse": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint-config-prettier": "^8.8.0",
