--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.5",
+    "sharp": "^0.32.1",
     "swiper": "^9.2.4",
     "typescript": "5.0.4"
   },
